syntax = "proto3";
package sensors;

option go_package = "sensors/pb;sensors";

message PayloadRequest {
    string id_1 = 1;
    int32 id_2 = 2;
    string type = 3;
    float value = 4;
    string timestamp = 5;
}

message PayloadGetSensors {
    optional string id_1 = 1;
    optional int32 id_2 = 2;
    optional string from = 3;
    optional string to = 4;
}

message PayloadUpdateSensors {
    string id_1 = 1;
    int32 id_2 = 2;
    string type = 3;
    float value = 4;
    string timestamp = 5;
    optional string filter_id1 = 6;
    optional int32 filter_id2 = 7;
    optional string from = 8;
    optional string to = 9;
}

message Sensor {
    string id_1 = 1;
    int32 id_2 = 2;
    string type = 3;
    float value = 4;
    string timestamp = 5;
}

message Sensors {
    repeated Sensor sensors = 1;
}

message MessageReturn {
    string message = 1;
}

// message GetFieldActivityListRequest {
//     string id = 1;
//     string outside_task_number = 2;
//     repeated int32 status = 3;
//     int32 limit = 4;
//     int32 offset = 5;
//     string sort = 6;
//     string start_date = 7;
//     string end_date = 8;
//     repeated string purpose_ids = 9;
//     string column = 10;
// }


// Services
service SensorServices {
    rpc InsertSensor(PayloadRequest) returns (MessageReturn) {}
    rpc GetSensors(PayloadGetSensors) returns (Sensors) {}
    rpc EditSensor(PayloadUpdateSensors) returns (MessageReturn) {}
    rpc DeleteSensor(PayloadGetSensors) returns (MessageReturn) {}
}
